# star_crawl

./: .gitignore  CLAUDE.md  PLAN.html  README.md  STAR_GRAPH.html  WIREFRAMES.html  pyproject.toml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
configs/graph/: README.md  aliases.yaml  blacklist.yaml  glossary.yaml
configs/sources/: README.md  cloudflare_blog.yaml  grab_engineering.yaml  netflix_techblog.yaml  uber_engineering.yaml
specs/001-crawler-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-crawler-core/checklists/: requirements.md
specs/001-crawler-core/contracts/: cli.md  source-config.md
specs/002-web-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-ui/checklists/: requirements.md
specs/002-web-ui/contracts/: routes.md
specs/003-star-graph/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-star-graph/checklists/: requirements.md
specs/003-star-graph/contracts/: cli.md  graph-api.md
specs/004-obsidian-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-obsidian-ui/contracts/: keyboard-shortcuts.md  panel-routes.md  workspace-state.md
src/star_crawl/: __init__.py  cli.py
src/star_crawl/core/: frontier.py  pipeline.py  policy.py  schemas.py
src/star_crawl/db/: connection.py  migrate.py
src/star_crawl/extractors/: base.py  readability_x.py  trafilatura_x.py
src/star_crawl/fetchers/: base.py  browser.py  http.py
src/star_crawl/filters/: lang.py  quality.py
src/star_crawl/graph/: __init__.py  builder.py  cluster.py  export.py  extract.py  extract_llm.py  glossary.py  normalize.py  ppmi.py  repository.py  runner.py
src/star_crawl/migrations/: 000_schema_version.sql  001_initial.sql  002_fts5.sql  003_star_graph.sql
src/star_crawl/seeders/: base.py  pagination.py  rss.py  sitemap.py
src/star_crawl/sinks/: sqlite.py
src/star_crawl/sources/: loader.py
src/star_crawl/web/: app.py  auth.py  deps.py  markdown.py
src/star_crawl/web/routers/: articles.py  graph.py  home.py  palette.py  panels.py  (+4 more)
tests/: conftest.py
tests/fixtures/grab/: sample_article.html
tests/graph/: test_builder.py  test_export.py  test_extract.py  test_extract_llm.py  test_glossary.py  test_normalize.py  test_ppmi.py
tests/integration/: test_pipeline.py  test_resume.py  test_seeders.py
tests/unit/: test_extractor.py  test_frontier.py  test_loader.py  test_migrate.py  test_schemas.py
tests/web/: conftest.py  test_article_keywords.py  test_auth.py  test_graph.py  test_graph_filters.py  test_graph_rebuild.py  test_panel_routes.py  test_routes.py  test_runs.py  test_source_actions.py  test_tree_endpoint.py
tests/web/e2e/: conftest.py  test_workspace_tabs.py
(+39 files in other folders)
